--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1>PRACTICA COMANDOS DE GIT!</h1>
+<h6>Modifico esta linea para revertir los cambios</h6>
 <div><img src="img/img1.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
