Se agregan parrafos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <h1>PRACTICA COMANDOS DE GIT!</h1>
 <h5>Se actualiza esta linea desde la rama de trabajo</h5>
+<p>Se agrega un parrafo</p>
+<p>Se agrega otro parrafo XD</p>
 <div><img src="img/img1.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
